--- a/src/TidyWindow.App/Views/BootstrapPage.xaml
+++ b/src/TidyWindow.App/Views/BootstrapPage.xaml
@@ -4,6 +4,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="clr-namespace:TidyWindow.App.Converters"
+    xmlns:controls="clr-namespace:TidyWindow.App.Views"
     mc:Ignorable="d"
     Title="Bootstrap"
     Background="Transparent">
@@ -138,32 +139,13 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <StackPanel Orientation="Horizontal">
-                <Border Width="48"
-                        Height="48"
-                        CornerRadius="12"
-                        Background="#1E293B"
-                        Margin="0,0,12,0">
-                    <TextBlock Text="🧰"
-                               FontSize="24"
-                               HorizontalAlignment="Center"
-                               VerticalAlignment="Center"/>
-                </Border>
-                <StackPanel>
-                    <TextBlock Text="Bootstrap workspace"
-                               FontSize="26"
-                               FontWeight="Bold"
-                               Foreground="#F8FAFC"/>
-                    <TextBlock Text="{Binding Headline}"
-                               FontSize="14"
-                               Foreground="#94A3B8"
-                               TextWrapping="Wrap"/>
-                </StackPanel>
-            </StackPanel>
+            <controls:PageTitleBar Title="Bootstrap workspace"
+                                    Subtitle="{Binding Headline}"
+                                    IconGlyph="🧰"
+                                    Margin="0,0,0,20"/>
 
             <Grid x:Name="LayoutGrid"
-                  Grid.Row="1"
-                  Margin="0,28,0,0">
+                  Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="3*"
                                       MinWidth="360"/>
