--- a/src/TidyWindow.App/Views/RegistryOptimizerPage.xaml
+++ b/src/TidyWindow.App/Views/RegistryOptimizerPage.xaml
@@ -4,6 +4,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:strings="clr-namespace:TidyWindow.App.Resources.Strings"
+    xmlns:controls="clr-namespace:TidyWindow.App.Views"
       mc:Ignorable="d"
     Title="{x:Static strings:RegistryOptimizerStrings.PageTitle}"
       Background="Transparent">
@@ -33,33 +34,14 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <StackPanel Orientation="Horizontal"
-                        VerticalAlignment="Top">
-                <Border Width="48"
-                        Height="48"
-                        CornerRadius="12"
-                        Background="#1E293B"
-                        Margin="0,0,12,0">
-                    <TextBlock Text="🧩"
-                               FontSize="24"
-                               HorizontalAlignment="Center"
-                               VerticalAlignment="Center"/>
-                </Border>
-                <StackPanel>
-                    <TextBlock Text="{x:Static strings:RegistryOptimizerStrings.PageTitle}"
-                               FontSize="26"
-                               FontWeight="Bold"
-                               Foreground="#F8FAFC"/>
-                    <TextBlock Text="{Binding Headline}"
-                               FontSize="14"
-                               Foreground="#94A3B8"
-                               TextWrapping="Wrap"/>
-                </StackPanel>
-            </StackPanel>
+            <controls:PageTitleBar Title="{x:Static strings:RegistryOptimizerStrings.PageTitle}"
+                                    Subtitle="{Binding Headline}"
+                                    IconGlyph="🧩"
+                                    Margin="0,0,0,28"/>
 
             <Grid x:Name="MainLayoutGrid"
                   Grid.Row="1"
-                  Margin="0,28,0,0">
+                  Margin="0,0,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition x:Name="PrimaryColumnDefinition"
                                       Width="3*"
